<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@android:style/Theme.Holo.Light">

  <GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:columnCount="4" >

    <TextView
      android:id="@+id/tvUserName"
      android:layout_row="0"
      android:layout_column="0"
      android:layout_columnSpan="3"
      android:layout_gravity="fill_horizontal|top"
      android:text="UserName" />
      
    <ImageView
      android:id="@+id/ivUserLogo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_row="0"
      android:layout_rowSpan="3"
      android:layout_column="3"
      android:layout_gravity="fill_horizontal|fill_vertical"
      android:src="@drawable/ic_launcher" />
      
    <TextView
      android:layout_row="1"
      android:layout_column="0"
      android:layout_gravity="left|top"
      android:text="@string/total_randos_text" />
    <TextView
      android:id="@+id/tvTotalRandos"
      android:layout_row="1"
      android:layout_column="1"
      android:layout_gravity="left|top"
      android:text="0" />
      
    <TextView
      android:layout_row="2"
      android:layout_column="0"          
      android:layout_gravity="left|top"
      android:text="@string/total_likes_text" />
    <TextView
      android:id="@+id/tvTotalLikes"
      android:layout_row="2"
      android:layout_column="1"
      android:layout_gravity="left|top"
      android:text="0" />

    <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:layout_row="3"
      android:layout_column="0"
      android:layout_columnSpan="4"
      android:layout_gravity="fill_horizontal|top"
      android:background="@android:color/darker_gray"/>
    
    <TextView
      android:layout_row="4"
      android:layout_column="0"
      android:layout_columnSpan="4"
      android:layout_gravity="left|top"
      android:text="@string/last_rando_text" />
    
    <ImageView
      android:id="@+id/ivLastRando"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_row="5"
      android:layout_column="0"
      android:layout_columnSpan="4"
      android:layout_gravity="fill_horizontal|fill_vertical"
      android:src="@drawable/ic_launcher" />
  
    <TextView
      android:layout_row="6"
      android:layout_column="0"
      android:layout_gravity="left|top"
      android:text="@string/rando_likes_text" />
    <TextView
      android:id="@+id/tvRandoLikes"
      android:layout_row="6"
      android:layout_column="1"
      android:layout_gravity="left|top"
      android:text="0" />

    <TextView
      android:layout_row="6"
      android:layout_column="2"
      android:layout_gravity="left|top"
      android:text="@string/rando_comments_text" />
    <TextView
      android:id="@+id/tvRandoComments"
      android:layout_row="6"
      android:layout_column="3"
      android:layout_gravity="left|top"
      android:text="0" />
  </GridLayout>
</FrameLayout>